force-app/main/default/objects/GoodsPurchasingOrder__c/GoodsPurchasingOrder__c.object-meta.xml
<CustomObject>
    <label>Goods P/O</label>
    <nameField>
        <displayFormat>GP-{000000}</displayFormat>
        <label>GOODS PURCHASING ORDER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods P/O</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>