force-app/main/default/objects/GoodsPurchasingOrder__c/fields/AuditReconcileID__c.field-meta.xml
<CustomField>
    <fullName>AuditReconcileID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Reconcile ID</label>
    <referenceTo>Reconcile__c</referenceTo>
    <relationshipLabel>GOODS P/O</relationshipLabel>
    <relationshipName>GoodsPO</relationshipName>
    <type>Lookup</type>
</CustomField>