force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BillingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingStateProvince__c</fullName>
    <label>Billing State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>