force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BillingToCompanyName__c.field-meta.xml
<CustomField>
    <fullName>BillingToCompanyName__c</fullName>
    <label>Billing To Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>