force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BillingToInCaseOtherCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingToInCaseOtherCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing To(In Case Other Company)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GOODS P/O (INVOICE TO IN CASE OTHER COMPANY)</relationshipLabel>
    <relationshipName>GoodsPOInvoiceToOther</relationshipName>
    <type>Lookup</type>
</CustomField>