force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BillingToType__c.field-meta.xml
<CustomField>
    <fullName>BillingToType__c</fullName>
    <label>Billing-To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingToType</valueSetName>
    </valueSet>
</CustomField>