force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BillingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingZipPostalCode__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>