force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BuyingCommercialValueUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingCommercialValueUSD__c</fullName>
    <label>BUYING COMMERCIAL VALUE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>