force-app/main/default/objects/GoodsPurchasingOrder__c/fields/BuyingOrderPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>BuyingOrderPriceFCY__c</fullName>
    <label>BUYING ORDER PRICE(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>