force-app/main/default/objects/GoodsPurchasingOrder__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTRACT ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>GoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>