force-app/main/default/objects/GoodsPurchasingOrder__c/fields/CorporateMyNumberOfBillingTo__c.field-meta.xml
<CustomField>
    <fullName>CorporateMyNumberOfBillingTo__c</fullName>
    <label>Corporate My Number of Billing-To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>