force-app/main/default/objects/GoodsPurchasingOrder__c/fields/CorporateNumberOfBillingTo__c.field-meta.xml
<CustomField>
    <fullName>CorporateNumberOfBillingTo__c</fullName>
    <label>Corporate Number of Billing-To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>