force-app/main/default/objects/GoodsPurchasingOrder__c/fields/CSCDType__c.field-meta.xml
<CustomField>
    <fullName>CSCDType__c</fullName>
    <label>CS/CD TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSCDType</valueSetName>
    </valueSet>
</CustomField>