force-app/main/default/objects/GoodsPurchasingOrder__c/fields/DataPull__c.field-meta.xml
<CustomField>
    <fullName>DataPull__c</fullName>
    <inlineHelpText>If want to automatic data updates from other process 
-Select the process want to be copied from
*Automatic in Data Updates Method must be selected to automatic data updates</inlineHelpText>
    <label>DATA PULL</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DataUpdateMethod__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DataPull</valueSetName>
    </valueSet>
</CustomField>