force-app/main/default/objects/GoodsPurchasingOrder__c/fields/DataUpdateMethod__c.field-meta.xml
<CustomField>
    <fullName>DataUpdateMethod__c</fullName>
    <inlineHelpText>If want to automatic data updates from other process
-Select Automatic
If want to input data manually
-Select Manual</inlineHelpText>
    <label>DATA UPDATE METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DataUpdateMethod</valueSetName>
    </valueSet>
</CustomField>