force-app/main/default/objects/GoodsPurchasingOrder__c/fields/DeliveryTargetDateToCustomer__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTargetDateToCustomer__c</fullName>
    <label>DELIVERY TARGET DATE TO CUSTOMER</label>
    <type>Date</type>
</CustomField>