force-app/main/default/objects/GoodsPurchasingOrder__c/fields/DeliveryTargetDateToWarehouse__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTargetDateToWarehouse__c</fullName>
    <label>DELIVERY TARGET DATE TO WAREHOUSE</label>
    <type>Date</type>
</CustomField>