force-app/main/default/objects/GoodsPurchasingOrder__c/fields/DestinationWarehouseID__c.field-meta.xml
<CustomField>
    <fullName>DestinationWarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESTINATION WAREHOUSE ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>GoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>