force-app/main/default/objects/GoodsPurchasingOrder__c/fields/EmailOfBillingTo__c.field-meta.xml
<CustomField>
    <fullName>EmailOfBillingTo__c</fullName>
    <label>Email of Billing-To</label>
    <type>Email</type>
</CustomField>