force-app/main/default/objects/GoodsPurchasingOrder__c/fields/GoodsPurchasingOrder__c.field-meta.xml
<CustomField>
    <fullName>GoodsPurchasingOrder__c</fullName>
    <label>GOODS PURCHASING ORDER STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderStatus</valueSetName>
    </valueSet>
</CustomField>