force-app/main/default/objects/GoodsPurchasingOrder__c/fields/GoodsPurchasingOrderDate__c.field-meta.xml
<CustomField>
    <fullName>GoodsPurchasingOrderDate__c</fullName>
    <label>ORDER DATE TO SUPPLIER</label>
    <type>Date</type>
</CustomField>