force-app/main/default/objects/GoodsPurchasingOrder__c/fields/GoodsPurchasingOrderName__c.field-meta.xml
<CustomField>
    <fullName>GoodsPurchasingOrderName__c</fullName>
    <label>GOODS PURCHASING ORDER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>