force-app/main/default/objects/GoodsPurchasingOrder__c/fields/GoodsPurchasingOrderType__c.field-meta.xml
<CustomField>
    <fullName>GoodsPurchasingOrderType__c</fullName>
    <label>GOODS PURCHASING ORDER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrderType</valueSetName>
    </valueSet>
</CustomField>