force-app/main/default/objects/GoodsPurchasingOrder__c/fields/ParentGoodsPurchasingOrderID__c.field-meta.xml
<CustomField>
    <fullName>ParentGoodsPurchasingOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT GOODS PURCHASING ORDER ID</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>CHILD GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>ParentGoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>