force-app/main/default/objects/GoodsPurchasingOrder__c/fields/PhoneOfBillingTo__c.field-meta.xml
<CustomField>
    <fullName>PhoneOfBillingTo__c</fullName>
    <label>Phone of Billing-To</label>
    <type>Phone</type>
</CustomField>