force-app/main/default/objects/GoodsPurchasingOrder__c/fields/PICNameOfBillingToOurCompany__c.field-meta.xml
<CustomField>
    <fullName>PICNameOfBillingToOurCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C Name of Billing-To(Our Company)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GoodsPOPIC</relationshipName>
    <type>Lookup</type>
</CustomField>