force-app/main/default/objects/GoodsPurchasingOrder__c/fields/PICSupplier__c.field-meta.xml
<CustomField>
    <fullName>PICSupplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF SUPPLIER</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Supplier__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>GoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>