force-app/main/default/objects/GoodsPurchasingOrder__c/fields/PurchasingOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchasingOrderNumber__c</fullName>
    <label>PURCHASING ORDER NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>