force-app/main/default/objects/GoodsPurchasingOrder__c/fields/ReplenishID__c.field-meta.xml
<CustomField>
    <fullName>ReplenishID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replenishment ID</label>
    <referenceTo>Replenishment__c</referenceTo>
    <relationshipLabel>GOODS P/O</relationshipLabel>
    <relationshipName>GoodsPO</relationshipName>
    <type>Lookup</type>
</CustomField>