force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupAmountOfBuyingTax__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfBuyingTax__c</fullName>
    <label>ROLLUP AMOUNT OF BUYING TAX</label>
    <summarizedField>GoodsPOProduct__c.AmountOfBuyingTax__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>