force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupBuyingAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollupBuyingAmountInclTax__c</fullName>
    <label>ROLLUP BUYING AMOUNT INCL TAX</label>
    <summarizedField>GoodsPOProduct__c.BuyingAmountInclTax__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>