force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupFinalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupFinalNetWeight__c</fullName>
    <label>ROLLUP FINAL NET WEIGHT</label>
    <summarizedField>GoodsPOProduct__c.FinalNetWeight__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>