force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupFinalQuantity__c.field-meta.xml
<CustomField>
    <fullName>RollupFinalQuantity__c</fullName>
    <label>ROLLUP FINAL QUANTITY</label>
    <summarizedField>GoodsPOProduct__c.FinalQuantity__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>