force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollUpGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>RollUpGrossWeight__c</fullName>
    <label>ROLLUP TOTAL GROSS WEIGHT</label>
    <summarizedField>GoodsPOProduct__c.TotalGrossWeight__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>