force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollUpNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollUpNetWeight__c</fullName>
    <label>ROLLUP PLAN NET WEIGHT</label>
    <summarizedField>GoodsPOProduct__c.TotalNetWeight__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>