force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupRecomendQuantity__c.field-meta.xml
<CustomField>
    <fullName>RollupRecomendQuantity__c</fullName>
    <label>ROLLUP RECOMMENDED QUANTITY</label>
    <summarizedField>GoodsPOProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>