force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupRecommendNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupRecommendNetWeight__c</fullName>
    <label>ROLLUP RECOMMENDED NET WEIGHT</label>
    <summarizedField>GoodsPOProduct__c.RecommendNetWeight__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>