force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupTotalAmountBuying__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountBuying__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF BUYING</label>
    <summarizedField>GoodsPOProduct__c.TotalAmountOfBuying__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>