force-app/main/default/objects/GoodsPurchasingOrder__c/fields/RollupTotalMeasurement__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalMeasurement__c</fullName>
    <label>ROLLUP TOTAL MEASUREMENT</label>
    <summarizedField>GoodsPOProduct__c.TotalMeasurement__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>