force-app/main/default/objects/GoodsPurchasingOrder__c/fields/SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS SALES ORDER ID</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>GoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>