force-app/main/default/objects/GoodsPurchasingOrder__c/fields/SellingCommercialValueLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingCommercialValueLocal__c</fullName>
    <label>SELLING COMMERCIAL VALUE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>