force-app/main/default/objects/GoodsPurchasingOrder__c/fields/ServiceID__c.field-meta.xml
<CustomField>
    <fullName>ServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE ID</label>
    <referenceTo>ServiceMaster__c</referenceTo>
    <relationshipLabel>GOODS P/O</relationshipLabel>
    <relationshipName>GoodsPOService</relationshipName>
    <type>Lookup</type>
</CustomField>