force-app/main/default/objects/GoodsPurchasingOrder__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUPPLIER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GOODS PURCHASING ORDER</relationshipLabel>
    <relationshipName>GoodsPurchasingOrder</relationshipName>
    <type>Lookup</type>
</CustomField>