force-app/main/default/objects/GoodsPurchasingOrder__c/fields/Total_Buying__c.field-meta.xml
<CustomField>
    <fullName>Total_Buying__c</fullName>
    <label>Total Buying</label>
    <summarizedField>GoodsPOProduct__c.Total_Buying__c</summarizedField>
    <summaryForeignKey>GoodsPOProduct__c.GoodsPOID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>