force-app/main/default/objects/GoodsPurchasingOrder__c/fields/TotalAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountPaid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>PayablesAmount__c.AmountPaid__c</summarizedField>
    <summaryForeignKey>PayablesAmount__c.GoodSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>