force-app/main/default/objects/GoodsPurchasingOrder__c/fields/TotalAmountUnpaid__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUnpaid__c</fullName>
    <formula>Total_Buying__c - TotalAmountPaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Unpaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>