force-app/main/default/objects/GoodsPurchasingOrder__c/recordTypes/MaterialOrder.recordType-meta.xml
<RecordType>
    <fullName>MaterialOrder</fullName>
    <active>true</active>
    <label>Material Order</label>
</RecordType>