force-app/main/default/objects/GoodsPurchasingOrder__c/recordTypes/ServiceOrder.recordType-meta.xml
<RecordType>
    <fullName>ServiceOrder</fullName>
    <active>true</active>
    <label>Service Order</label>
</RecordType>