force-app/main/default/objects/GoodsPurchasingOrder__c/recordTypes/StandardGoodsPurchasingOrder.recordType-meta.xml
<RecordType>
    <fullName>StandardGoodsPurchasingOrder</fullName>
    <active>true</active>
    <label>Standard Goods Purchasing Order</label>
</RecordType>