force-app/main/default/objects/GoodsPurchasingOrder__c/listViews/GoodsPOOnProgress.listView-meta.xml
<ListView>
    <fullName>GoodsPOOnProgress</fullName>
    <columns>NAME</columns>
    <columns>OrderIntExtType__c</columns>
    <columns>GoodsPurchasingOrder__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PurchasingOrderNumber__c</columns>
    <columns>GoodsPurchasingOrderName__c</columns>
    <columns>GoodsPurchasingOrderType__c</columns>
    <columns>Supplier__c</columns>
    <columns>PICSupplier__c</columns>
    <columns>DeliveryTargetDateToWarehouse__c</columns>
    <columns>DestinationWarehouseID__c</columns>
    <columns>Shippingaddress__c</columns>
    <columns>CSCDType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Goods P/O-On Progress</label>
</ListView>